<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:text="@string/textview_frequency_1" />

        <EditText
            android:id="@+id/editText_freq"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/hint_freq_input"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:paddingTop="12dp"
            android:text="@string/textview_frequency_2"
            android:textAlignment="textStart" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/freq_selection_togglegroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <Button
            android:id="@+id/togglebutton_week"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_week" />

        <Button
            android:id="@+id/togglebutton_two_weeks"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_twoweeks" />

        <Button
            android:id="@+id/togglebutton_month"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_month" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>