<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_new_fooditem"
        style="@style/activity_imageviews"
        android:layout_marginVertical="8dp"
        android:contentDescription="@string/food_image_content_description"
        android:scaleType="centerInside"
        android:src="@drawable/ic_camera"
        android:transitionName="@string/transition_detail" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_label"
            android:importantForAutofill="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <include layout="@layout/brand_amount_unit_newfooditem" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/hint_more_information"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
