<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_brand"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:importantForAutofill="no"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <AutoCompleteTextView
            android:id="@+id/new_fooditem_unit_dropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_unit"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>